unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/pse__RSS_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for the resource search service.</description>
    <label>Resource Search Service</label>
</CustomObject>