unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Availability_Priority__c.field-meta.xml
<CustomField>
    <fullName>pse__Availability_Priority__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Determines the priority of percentage availability when matching and ranking resources with Intelligent Staffing. The default value is 3. 1 is the highest priority. 2 is next highest, and so on. Priority values must be unique.</description>
    <inlineHelpText>Determines the priority of percentage availability when matching and ranking resources with Intelligent Staffing. The default value is 3. 1 is the highest priority. 2 is next highest, and so on. Priority values must be unique.</inlineHelpText>
    <label>Availability Priority</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>