unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Candidates_Can_Self_Nominate_for_Work__c.field-meta.xml
<CustomField>
    <fullName>pse__Candidates_Can_Self_Nominate_for_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated:Enables candidates to express interest in resource requests that have the Allow Candidates to Self-Nominate checkbox selected.</description>
    <inlineHelpText>Enables candidates to express interest in resource requests that have the Allow Candidates to Self-Nominate checkbox selected.</inlineHelpText>
    <label>Dep:CandidatesCanSelfNominateforWork</label>
    <type>Checkbox</type>
</CustomField>