unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Custom_Filter_Fields_Weighting__c.field-meta.xml
<CustomField>
    <fullName>pse__Custom_Filter_Fields_Weighting__c</fullName>
    <defaultValue>'Essential'</defaultValue>
    <description>Determines how important it is that the resource matches the custom filters. Essential means all custom filters must match the fields for the resource. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
    <inlineHelpText>Determines how important it is that the resource matches the custom filters. Essential means all custom filters must match the fields for the resource. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
    <label>Custom Filter Fields Weighting</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>