unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Filter_Fields_Priority__c.field-meta.xml
<CustomField>
    <fullName>pse__Filter_Fields_Priority__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Determines the priority of Role, RPG, and custom filter fields when matching and ranking resources with Intelligent Staffing. The default value is 1. 1 is the highest priority. 2 is next highest, and so on. Priority values must be unique.</description>
    <inlineHelpText>Determines the priority of Role, RPG, and custom filter fields when matching and ranking resources with Intelligent Staffing. The default value is 1. 1 is the highest priority. 2 is next highest, and so on. Priority values must be unique.</inlineHelpText>
    <label>Filter Fields Priority</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>