unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Practice_Weighting__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice_Weighting__c</fullName>
    <defaultValue>'Essential'</defaultValue>
    <description>Determines how important it is that the resource matches the Practice value. Essential means the Practice filter value must match the resource’s practice. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
    <inlineHelpText>Determines how important it is that the resource matches the Practice value. Essential means the Practice filter value must match the resource’s practice. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
    <label>Practice Weighting</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>