unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Region_Weighting__c.field-meta.xml
<CustomField>
    <fullName>pse__Region_Weighting__c</fullName>
    <defaultValue>'Essential'</defaultValue>
    <description>Determines how important it is that the resource matches the Region filter value. Essential means the Region filter value must match the resource’s region. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
    <inlineHelpText>Determines how important it is that the resource matches the Region filter value. Essential means the Region filter value must match the resource’s region. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
    <label>Region Weighting</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>