unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Role_Weighting__c.field-meta.xml
<CustomField>
    <fullName>pse__Role_Weighting__c</fullName>
    <defaultValue>'Essential'</defaultValue>
    <description>Determines how important it is that the resource matches the Role filter value. Essential means the Role filter value must match the resource’s role. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
    <inlineHelpText>Determines how important it is that the resource matches the Role filter value. Essential means the Role filter value must match the resource’s role. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
    <label>Role Weighting</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>