unpackaged/main/default/objects/pse__RSS_Custom_Settings__c/fields/pse__Worked_With_Customer_Weighting__c.field-meta.xml
<CustomField>
    <fullName>pse__Worked_With_Customer_Weighting__c</fullName>
    <defaultValue>'Essential'</defaultValue>
    <description>Determines how important it is that the resource matches the Worked With Customer filter. Essential means Worked With Customer must match the field for the resource. Other possible values from most to least important are Ideal, Desirable, and Suggested.</description>
    <inlineHelpText>Determines how important it is that the resource matches the Worked With Customer filter. Essential means Worked With Customer must match the field for the resource. Other possible values from most to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
    <label>Worked With Customer Weighting</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>